# CROSS-PQClean

./: .gitignore  HOWTO_compliance.md  HOWTO_liboqs.md  META.yml  README.md
avx2/: CROSS.c  Makefile  Makefile.Microsoft_nmake  architecture_detect.h  csprng_hash.h  fq_arith.h  merkle.c  restr_arith.h  seedtree.c  sha3.h
clean/: CROSS.c  CROSS.h  Makefile  Makefile.Microsoft_nmake  api.h  csprng_hash.c  csprng_hash.h  fips202_CROSS.c  fips202_CROSS.h  fq_arith.h  keccakf1600.c  keccakf1600.h  merkle.c  merkle.h  merkle_tree.h  namespace.h  pack_unpack.c  pack_unpack.h  parameters.h  restr_arith.h  seedtree.c  seedtree.h  set.h  sha3.h  sign.c
generate/: HOWTO_liboqs.md  clean.py  generate.py  kat.py  liboqs_astyle.ini  make_csv.py  parameter_sets.csv  utility.py
generate/astyle/: pqclean_astyle.ini
generate/crypto_sign/cross-rsdp-128-balanced/: META.yml
generate/crypto_sign/cross-rsdp-128-balanced/avx2/: CROSS.c  CROSS.h  Makefile  Makefile.Microsoft_nmake  api.h  csprng_hash.c  csprng_hash.h  fq_arith.h  merkle.c  merkle.h  merkle_tree.h  pack_unpack.c  pack_unpack.h  parameters.h  restr_arith.h  seedtree.c  seedtree.h  set.h  sha3.h  sign.c
generate/crypto_sign/cross-rsdp-128-balanced/clean/: CROSS.c  CROSS.h  Makefile  Makefile.Microsoft_nmake  api.h  csprng_hash.c  csprng_hash.h  fq_arith.h  merkle.c  merkle.h  merkle_tree.h  pack_unpack.c  pack_unpack.h  parameters.h  seedtree.c  seedtree.h  set.h  sign.c
generate/crypto_sign/cross-rsdp-128-fast/: META.yml
generate/crypto_sign/cross-rsdp-128-fast/avx2/: CROSS.c  CROSS.h  Makefile  Makefile.Microsoft_nmake  api.h  csprng_hash.c  csprng_hash.h  merkle.c  merkle.h  merkle_tree.h  pack_unpack.c  pack_unpack.h  parameters.h  restr_arith.h  seedtree.c  seedtree.h  set.h  sha3.h  sign.c
generate/crypto_sign/cross-rsdp-128-fast/clean/: CROSS.c  CROSS.h  Makefile  Makefile.Microsoft_nmake  api.h  csprng_hash.c  csprng_hash.h  merkle.c  merkle.h  merkle_tree.h  pack_unpack.c  pack_unpack.h  parameters.h  seedtree.c  seedtree.h  set.h  sha3.h  sign.c
generate/crypto_sign/cross-rsdp-128-small/: META.yml
generate/crypto_sign/cross-rsdp-128-small/avx2/: CROSS.c  CROSS.h  Makefile  Makefile.Microsoft_nmake  api.h  csprng_hash.c  csprng_hash.h  merkle.c  merkle.h  merkle_tree.h  pack_unpack.c  pack_unpack.h  seedtree.c  seedtree.h  set.h  sha3.h  sign.c
generate/crypto_sign/cross-rsdp-128-small/clean/: CROSS.c  CROSS.h  Makefile  Makefile.Microsoft_nmake  api.h  csprng_hash.c  csprng_hash.h  merkle.c  merkle.h  merkle_tree.h  pack_unpack.c  pack_unpack.h  parameters.h  seedtree.c  seedtree.h  set.h  sha3.h  sign.c
generate/crypto_sign/cross-rsdp-192-balanced/: META.yml
generate/crypto_sign/cross-rsdp-192-balanced/avx2/: CROSS.c  CROSS.h  Makefile  Makefile.Microsoft_nmake  api.h  architecture_detect.h  csprng_hash.c  csprng_hash.h  fq_arith.h  merkle.c  merkle.h  merkle_tree.h  pack_unpack.c  pack_unpack.h  seedtree.c  (+3 more)
generate/crypto_sign/cross-rsdp-192-fast/: META.yml
generate/crypto_sign/cross-rsdp-192-small/: META.yml
generate/crypto_sign/cross-rsdp-256-balanced/: META.yml
generate/crypto_sign/cross-rsdp-256-fast/: META.yml
generate/crypto_sign/cross-rsdp-256-small/: META.yml
generate/crypto_sign/cross-rsdpg-128-balanced/: META.yml
generate/crypto_sign/cross-rsdpg-128-fast/: META.yml
generate/crypto_sign/cross-rsdpg-128-small/: META.yml
generate/crypto_sign/cross-rsdpg-192-balanced/: META.yml
generate/crypto_sign/cross-rsdpg-192-fast/: META.yml
generate/crypto_sign/cross-rsdpg-192-small/: META.yml
generate/crypto_sign/cross-rsdpg-256-balanced/: META.yml
generate/crypto_sign/cross-rsdpg-256-fast/: META.yml
generate/crypto_sign/cross-rsdpg-256-small/: META.yml
test-cross/KAT_Generation/: CMakeLists.txt
test-cross/KAT_Generation/include/: KAT_NIST_rng.h
test-cross/KAT_Generation/lib/: KAT_NIST_rng.c  PQCgenKAT_sign.c
(+523 files in other folders)
